Removed greetings date seconds and day

--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Glowing Icon Hover Effect</title>
+  <title>Startpage</title>
+  <link rel="icon" href="icons/home.png">
   <link rel="stylesheet" href="./style.css">
   <script src="https://kit.fontawesome.com/44434e820e.js" crossorigin="anonymous"></script>
 
 
 </head>
 <body>
-<h1>Hello User!</h1>
-<h3 id="date"></h3>
+<h1 id="time">Hello User!</h1>
 <!-- partial:index.partial.html -->
 <div class="search_block">
   <form id="search_eng_form" method="get" action="https://www.google.com/search?q=">
